--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
+    "embed-table": "^4.2.3",
     "express": "^4.18.3",
     "express-formidable": "^1.2.0",
     "mongoose": "^8.2.0",
