--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@jaxon_song/image-processor": "^1.1.5",
+    "core-js": "^3.36.0",
     "cors": "^2.8.5",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
     "embed-table": "^4.2.3",
     "express": "^4.18.3",
     "express-formidable": "^1.2.0",
+    "image-downloader": "^4.3.0",
+    "jimp": "^0.22.12",
     "mongoose": "^8.2.0",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "tesseract.js": "^5.0.5"
   }
 }
